--- a/scss/banner/banner.scss
+++ b/scss/banner/banner.scss
@@ -31,6 +31,7 @@
         }
     }
     .btn-dark {
+        cursor: pointer;
         margin-bottom: 20px;
         @media (max-width: 576px) {
             margin-bottom: 0;
