--- a/scss/constants/constants.scss
+++ b/scss/constants/constants.scss
@@ -37,13 +37,14 @@ p {
 }
 
 .margin {
-    margin-bottom: 70px;
+    margin-bottom: 80px;
     @media (max-width: 990px) {
         margin-bottom: 60px;
     }
-    @media (max-width: 576px) {
-        margin-bottom: 45px;
-    }
+}
+
+button,input,a {
+    outline: none;
 }
 
 main {
@@ -57,4 +58,16 @@ a {
 ul {
     list-style-type: none;
     padding: 0;
+}
+
+.tabs__content {
+    display: none;
+}
+
+.tabs__content.active {
+    display: block;
+}
+
+.slick-slide {
+    outline: none;
 }
