--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,12 @@
 @import 'header/header.scss';
 @import 'banner/banner.scss';
 @import 'why/why.scss';
+@import 'achievements/achievements.scss';
+@import 'writing/writing.scss';
+@import 'sale/sale.scss';
+@import 'teacher/teacher.scss';
+@import 'review/review.scss';
+@import 'team/team.scss';
 @import 'form/form.scss';
 @import 'constants/constants.scss';
 @import 'contact/contact.scss';
