--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,14 @@
 @import 'header/header.scss';
 @import 'banner/banner.scss';
 @import 'why/why.scss';
+@import 'curse/curse.scss';
 @import 'achievements/achievements.scss';
+@import 'schedule/schedule.scss';
 @import 'writing/writing.scss';
 @import 'sale/sale.scss';
 @import 'teacher/teacher.scss';
 @import 'review/review.scss';
+@import 'question/question.scss';
 @import 'team/team.scss';
 @import 'form/form.scss';
 @import 'constants/constants.scss';
