--- a/scss/contact/contact.scss
+++ b/scss/contact/contact.scss
@@ -61,6 +61,10 @@
     }
     a {
         margin-right: 20px;
+        transition: .3s;
+        &:hover {
+            transform: scale(1.2);
+        }
     }
 }
 
