--- a/scss/review/review.scss
+++ b/scss/review/review.scss
@@ -41,6 +41,9 @@
         @media (max-width: 990px) {
             max-height: auto;
             height: auto;
+            border-radius: 15px;
+            margin: 10px 0;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
         }
     }
 }
