--- a/scss/team/team.scss
+++ b/scss/team/team.scss
@@ -11,6 +11,7 @@
         div {
             height: 200px;
             width: 100%;
+            overflow: hidden;
             cursor: pointer;
             @media (max-width: 1200px) {
                 height: 170px;
@@ -23,6 +24,10 @@
             height: 100%;
             width: 100%;
             object-fit: cover;
+            transition: .3s;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
     .tabs__content.active {
