--- a/scss/why/why.scss
+++ b/scss/why/why.scss
@@ -17,6 +17,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        transition: .3s;
+        &:hover {
+            box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.2);
+        }
         @media (max-width: 768px) {
             justify-content: center;
             flex-direction: column;
