--- a/scss/team/team.scss
+++ b/scss/team/team.scss
@@ -46,6 +46,8 @@
         border-radius: 20px;
         background: #fff;
         padding: 10px;
+        box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+        margin: 10px;
     }
     .mob-box-photo {
         display: flex;
