--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,191 @@ header {
           font-size: 1rem;
           text-align: center; } }
 
+.curse-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 30px; }
+  @media (max-width: 990px) {
+    .curse-container {
+      display: none; } }
+
+.curse-mob {
+  display: block; }
+
+.curse-num-container {
+  margin-bottom: auto; }
+
+.curse-box {
+  background: #FFF;
+  -webkit-box-shadow: 0 7px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 7px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (max-width: 990px) {
+    .curse-box {
+      -webkit-box-shadow: none;
+              box-shadow: none;
+      margin: 10px;
+      margin-bottom: 20px;
+      -webkit-box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+              box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07); } }
+
+.curse-box-title {
+  background: #C53D28;
+  border-radius: 15px;
+  padding: 15px 25px;
+  color: #FFF;
+  text-align: center;
+  margin-bottom: 20px;
+  min-height: 90px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  @media (max-width: 1400px) {
+    .curse-box-title {
+      padding: 15px; } }
+  @media (max-width: 990px) {
+    .curse-box-title {
+      padding: 5px;
+      margin-bottom: 0; } }
+  @media (max-width: 1400px) {
+    .curse-box-title br {
+      display: none; } }
+  @media (max-width: 1400px) {
+    .curse-box-title .curse-title {
+      font-size: 1.1rem; } }
+  .curse-box-title .price {
+    margin-top: 10px;
+    font-size: 1.5rem; }
+    @media (max-width: 1400px) {
+      .curse-box-title .price {
+        font-size: 1.1rem; } }
+
+.curse-num-box {
+  padding: 0 15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-bottom: 10px; }
+  @media (max-width: 1400px) {
+    .curse-num-box {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; } }
+  @media (max-width: 990px) {
+    .curse-num-box {
+      display: grid;
+      grid-template-columns: 1fr 5fr;
+      grid-gap: 10px;
+      padding: 0 10px;
+      margin: 10px 0; } }
+  .curse-num-box .num {
+    width: 80px;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #C53D28;
+    text-align: right;
+    margin-right: 20px; }
+    @media (max-width: 1400px) {
+      .curse-num-box .num {
+        width: auto;
+        margin: 0 0 10px 0; } }
+    @media (max-width: 990px) {
+      .curse-num-box .num {
+        width: auto;
+        margin: 0;
+        text-align: right;
+        font-size: 2.5rem; } }
+  .curse-num-box .img-icon-curse {
+    height: 55px;
+    text-align: right;
+    margin-right: 0;
+    margin-right: 15px; }
+    @media (max-width: 1400px) {
+      .curse-num-box .img-icon-curse {
+        margin: 0 0 10px 0;
+        height: auto; } }
+    @media (max-width: 990px) {
+      .curse-num-box .img-icon-curse {
+        height: auto;
+        margin: 0 auto; } }
+  .curse-num-box .text-light {
+    font-size: 1rem;
+    width: 200px;
+    font-weight: normal; }
+    @media (max-width: 1400px) {
+      .curse-num-box .text-light {
+        width: auto;
+        text-align: center; } }
+  .curse-num-box .bold {
+    font-weight: bold; }
+
+.curse-btn-box {
+  margin-top: 30px; }
+  .curse-btn-box .btn-white {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+    display: block;
+    text-align: center;
+    max-width: 100%; }
+
+.plus-box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 10px 0; }
+
 .achievements-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -988,7 +1173,10 @@ header {
   .team-mob .team-mob-box {
     border-radius: 20px;
     background: #fff;
-    padding: 10px; }
+    padding: 10px;
+    -webkit-box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+            box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+    margin: 10px; }
   .team-mob .mob-box-photo {
     display: -webkit-box;
     display: -webkit-flex;
