--- a/scss/form/form.scss
+++ b/scss/form/form.scss
@@ -22,6 +22,11 @@
         margin-bottom: 15px;
         font: normal 1rem 'Roboto', sans-serif;
     }
+    br {
+        @media (max-width: 990px) {
+            display: none;
+        }
+    }
 }
 
 .input-box {
