--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -114,6 +114,13 @@ header {
 .header-fix {
     background: #fff;
     box-shadow: 0 7px 20px rgba(0, 0, 0, .1);
+    .header-logo {
+        img {
+            height: 95px;
+            position: relative;
+            top: 5px;
+        }
+    }
     nav {
         ul {
             a {
