--- a/scss/matherial/matherial.scss
+++ b/scss/matherial/matherial.scss
@@ -15,6 +15,7 @@
         word-break: break-all;
     }
     p,a {
+        color: #000;
         display: block;
         margin-bottom: 10px;
     }
