--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -56,7 +56,7 @@ footer {
             margin: 0 auto;
             max-width: 250px;
         }
-        a {
+        p {
             margin: 0 15px;
             font: 900 .95rem 'Roboto', sans-serif;
             color: #000;
@@ -187,4 +187,8 @@ footer {
     @media (max-width: 990px) {
         display: block;
     }
+}
+
+.politika-footer a {
+    color: #000;
 }
