--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -15,6 +15,7 @@ header {
 
 .header-logo {
     img {
+        height: 125px;
         @media (max-width: 1024px) {
             height: 100px;
         }
@@ -48,7 +49,7 @@ header {
                 align-items: flex-start;
                 padding-bottom: 10px;
             }
-            a {
+            p {
                 margin: 0 10px;
                 padding: 12px 14px;
                 color: #fff;
@@ -93,6 +94,10 @@ header {
     }
 }
 
+.menu p {
+    cursor: pointer;
+}
+
 .header-social {
     display: flex;
     flex-direction: column;
@@ -123,7 +128,7 @@ header {
     }
     nav {
         ul {
-            a {
+            p {
                 color: #000;
                 &:hover {
                     border: 3px solid #000;
