--- a/scss/banner/banner.scss
+++ b/scss/banner/banner.scss
@@ -7,6 +7,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background: url(../img/banner/banner-bg.png) no-repeat center center;
     }
     .btn-dark {
         display: block;
