--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,8 @@ header {
       -webkit-box-align: center;
       -webkit-align-items: center;
           -ms-flex-align: center;
-              align-items: center; } }
+              align-items: center;
+      background: url(../img/banner/banner-bg.png) no-repeat center center; } }
   .banner .btn-dark {
     display: block; }
 
@@ -924,10 +925,10 @@ header {
             left: -15px; } }
         @media (max-width: 450px) {
           .writing-info .writing-punkt-box p:nth-child(3)::after {
-            left: 10px; } }
-        @media (max-width: 360px) {
+            left: -9px; } }
+        @media (max-width: 380px) {
           .writing-info .writing-punkt-box p:nth-child(3)::after {
-            left: -10px; } }
+            left: 0; } }
     .writing-info .writing-punkt-box p:last-child {
       width: 280px;
       margin: 0 auto; }
@@ -1033,7 +1034,9 @@ header {
   margin: 0 auto; }
   @media (max-width: 990px) {
     .teacher-container .teache-photo {
-      height: auto; } }
+      height: 300px;
+      -o-object-fit: cover;
+         object-fit: cover; } }
 
 .review .container {
   max-width: 990px; }
@@ -1384,7 +1387,6 @@ header {
 
 html,
 body {
-  font-family: 'Roboto', sans-serif;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
@@ -1422,7 +1424,9 @@ p {
     .margin {
       margin-bottom: 60px; } }
 
-button, input, a {
+button,
+input,
+a {
   outline: none; }
 
 main {
@@ -1868,3 +1872,7 @@ footer {
 
 .politika-footer a {
   color: #000; }
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/gotham/"); }
