--- a/scss/constants/constants.scss
+++ b/scss/constants/constants.scss
@@ -1,6 +1,5 @@
 html,
 body {
-    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
@@ -43,7 +42,9 @@ p {
     }
 }
 
-button,input,a {
+button,
+input,
+a {
     outline: none;
 }
 
