--- a/scss/writing/writing.scss
+++ b/scss/writing/writing.scss
@@ -20,7 +20,7 @@
             }
         }
     }
-    .writing-box:nth-child(5){
+    .writing-box:nth-child(5) {
         @media (max-width: 990px) {
             grid-column-start: 1;
             grid-column-end: 3;
@@ -71,8 +71,8 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
         @media (max-width: 990px) {
-           grid-template-columns: 1fr;
-        } 
+            grid-template-columns: 1fr;
+        }
         p {
             font: bold 1.2rem 'Roboto', sans-serif;
             position: relative;
@@ -106,7 +106,7 @@
                 }
             }
         }
-        p:nth-child(2){
+        p:nth-child(2) {
             width: 110px;
             margin: 0 auto;
             @media (max-width: 990px) {
@@ -120,7 +120,7 @@
                 }
             }
         }
-        p:nth-child(3){
+        p:nth-child(3) {
             width: 320px;
             margin: 0 auto;
             @media (max-width: 990px) {
@@ -141,10 +141,10 @@
                     left: -15px;
                 }
                 @media (max-width: 450px) {
-                   left: 10px;
+                    left: -9px;
                 }
-                @media (max-width: 360px) {
-                    left: -10px;
+                @media (max-width: 380px) {
+                    left: 0;
                 }
             }
         }
